fix spacing

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -1,17 +1,12 @@
-/*
- * http://www.paulirish.com/2012/box-sizing-border-box-ftw/
- * https://css-tricks.com/international-box-sizing-awareness-day/
- * Do not modify these two selectors, please
- */
+
 html {
   box-sizing: border-box;
   scroll-behavior: smooth;
 }
 *,
 *:before,
-*:after {
-  box-sizing: inherit;
-}
+*:after { box-sizing: inherit; }
+
 main {
   width: 90%;
   margin-top: 2em;
@@ -20,10 +15,6 @@ main {
   font-family: inherit;
   align-self: center;
 }
-
-/*
- * Global layout stuff
- */
 
 body {
   color: #545149;
@@ -38,9 +29,7 @@ body {
   display: flex;
   flex-direction: column-reverse;
 }
-/*
- * Additional CSS can be defined below or in other CSS files, as per instructions
- */
+
 .media-container {
   display: -webkit-flex;
   display: flex;
@@ -50,14 +39,14 @@ body {
 }
 
 .container,
-.profile {
-  width: 100%;
-}
+.profile { width: 100%; }
 
 @media (min-width: 768px) {
-  nav {
-    background-color: hsla(258, 62%, 60%, 0.678);
-  }
+
+  nav { background-color: hsla(258, 62%, 60%, 0.678); }
+
+  nav button { background-color: hsla(258, 72%, 70%, 0.678); }
+  
   .media-container {
     width: 100%;
     margin-left: auto;
